--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.22.1'
 
     - name: Build
-      run: go build -v -o redis-ttl ./cmd
+      run: go build -v -o redis-ttl ./cmd/redis-ttl
 
     - name: Test
       run: go test -v -race -vet=all -cover ./... 
